flapivor/tests/m1/hopix/parser/good/55-constructor-2.hopix
val y = Cons <Int> (0, Nil<Int>)