flapivor/tests/m1/hopix/parser/bad/34-type-definition-sum-4.hopix
type Pair<a,> = Pair(a, b)